[package]
name = "hashtagwiki"
version = "0.3.0"
authors = ["Sander Dijkhuis <mail@sanderdijkhuis.nl>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
regex = { version = "1.4.1" }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
serde_json = "1.0.59"
clap = "3.0.0-beta.2"
sophia = "0.6.2"
